--- a/task-03/index.html
+++ b/task-03/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="dist/basicLightbox.min.css" />
     <title>Document</title>
   </head>
   <body>
     <!-- <script src="./js/task-01.js"></script> -->
     <!-- <script src="./js/task-02.js"></script> -->
-    <script src="./js/task-03.js"></script>
+    <script type="module" src="./js/task-03.js"></script>
+    <script src="./dist/basicLightbox.min.js"></script>
   </body>
 </html>
