--- a/task-01/index.html
+++ b/task-01/index.html
@@ -6,6 +6,6 @@
     <title>Task-01</title>
   </head>
   <body>
-    <script src="./task-01.js"></script>
+    <script src="./js/task-01.js"></script>
   </body>
 </html>
